# Navigation-Planning

./: CMakeLists.txt  README.md  package.xml
Rviz/: auto_nav_config.rviz
Scripts/: a_star_planner.py  kinematic_controller.py  navigator.py  potential_field.py
World/: auto.world
launch/: auto_nav.launch  auto_navigation.launch  auto_navv.launch  auto_world.launch
maps/: my_map.pgm
